database can return info to stats

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".fight">
 
         </activity>
+        <activity
+            android:name=".setup">
+
+        </activity>
     </application>
 
 </manifest>
