Add in fighting
The fighting screen pops up in this update but the buttons do not work.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:name=".setup">
 
         </activity>
+        <activity
+            android:name=".MainFightActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
